# raft

./: .gitignore  Pipfile  README.md  prompts.py  pyproject.toml  raft.py
data/: garymarcus-substack-com.jsonl  garymarcus_benchmark.json  garymarcus_benchmark_openai.jsonl  garymarcus_chunked.jsonl  garymarcus_finetune.json  garymarcus_meta.json  garymarcus_openai.jsonl  garymarcus_transcript_1.json  garymarcus_transcript_2.json  garymarcus_transcript_3.json  garymarcus_transcript_4.json  garymarcus_transcript_benchmark.json  openai_finetune.jsonl  unstablerontology-substack-com.jsonl  unstablerontology-substack-com_chunked.jsonl
data/gary_marcus/: chroma.sqlite3
data/unstablerontology/: chroma.sqlite3
data/unstablerontology-substack-com/: chroma.sqlite3
raft/: __init__.py  chunker.py  cli.py  embeddings_helpers.py  files_helper.py  generate_finetune.py  memories.py  oai_finetune.py  prompt_manager.py  substack_embeddings.py
src/: __init__.py  chunker.py  embeddings_helpers.py  files_helper.py  generate_finetune.py  memories.py  oai_finetune.py  prompts.py  ssjl.py  substack_embeddings.py
